--- a/VendorAndOrderTracker.Tests/VendorAndOrderTracker.Tests.csproj
+++ b/VendorAndOrderTracker.Tests/VendorAndOrderTracker.Tests.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />
+    <ProjectReference Include="..\VendorAndOrderTracker\VendorAndOrderTracker.csproj" />
   </ItemGroup>
 
 </Project>
